# door-access-mgm

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.local.yml  compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements-prod.txt  tags.example.json
proj/access_control/: admin.py  apps.py  models.py  rpi_gpio_conf.py  serializers.py  tests.py  urls.py  views.py
proj/access_control/migrations/: 0001_initial.py
proj/access_control/tests/: test_models.py
proj/control_access/: apps.py  models.py
proj/control_access/migrations/: 0001_initial.py
proj/proj/: logconf.py  settings.py  urls.py
proj/scripts/: access_control_mgm.py  piz.py  provision.py  rpi_gpio.py  test_door.py
proj/users/: admin.py  models.py  serializers.py  views.py
proj/users/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_groups_and_more.py  0003_alter_user_options.py
